# api

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  dev.sh  docker-compose.yml  ne-student-API-definition.ts  ne-student-db.session.sql  package.json  redis.conf
.github/workflows/: docker-publish.yml
scripts/: genExamples.js
spec/: .prettierrc  common.ts  doc.html  errors.ts  examples.ts  ne-student-api.yml  requests.ts  responses.ts
sql/: 0001_setup.sql  0002_rename_pssword.sql  0003_unique_login.sql  0004_add_permissions.sql  0005_change_time_type.sql  0006_cascading_deletes.sql  0007_remodel_lesson.sql  0008_date_retrieval.sql  0009_typos_nullable_teacher_last_name.sql  0010_add_unique_to_junction_tables.sql  0011_make_lesson_complient_to_spec.sql  0012_more_date_retrieval.sql
src/: error.rs  main.rs  payload.rs  response.rs  token.rs  types.rs  util.rs
src/middleware/: authentication.rs  extractors.rs  lesson_permission.rs  mod.rs  permission.rs  teacher_permission.rs
src/model/: account.rs  lesson.rs  mod.rs  permission.rs  repeat.rs  single_occurance.rs  single_occurrence.rs  teacher.rs
src/model/permission/: lesson_permission.rs  mod.rs  permission_type.rs  teacher_permission.rs
src/model/repeat/: daily.rs  mod.rs  monthly.rs  single_occurrence.rs  weekly.rs
src/routes/: auth.rs  lesson.rs  mod.rs  permission.rs  teacher.rs  test.rs
