[package]
name = "ne-student-api"
version = "0.1.0"
authors = ["Yaroslav <q.link0.p@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
actix-web = "3.0.0-beta.1"
actix-rt = "1"
sqlx = { version = "0.3", features = [ "postgres" ] }
anyhow = "1.0.28"
listenfd = "0.3.3"
sqlx-pg-migrate = "1.0"
include_dir = "0.6.0"
dotenv = "0.6.0"