[package]
name = "ne-student-api"
version = "0.1.0"
authors = ["Yaroslav <q.link0.p@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
actix-web = "2.0"
actix-rt = "1"
actix-http = "1.0"
actix-service = "1.0"
sqlx = { version = "0.3", features = [ "postgres", "uuid" ] }
anyhow = "1.0"
listenfd = "0.3"
sqlx-pg-migrate = "1.0"
include_dir = "0.6"
dotenv = "0.6"
bcrypt = "0.8"
uuid = { version = "0.8", features = ["serde"] }
jwt = "0.10"
futures = "0.3"
hmac = "0.8"
sha2 = "0.9"
lazy_static = "1.4"
