[package]
authors = ["Yaroslav <q.link0.p@gmail.com>"]
edition = "2018"
name = "ne-student-api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "1.0"
actix-rt = "1"
actix-service = "1.0"
actix-web = "2.0"
anyhow = "1.0"
bcrypt = "0.8"
chrono = {version = "0.4", features = ["serde"]}
dotenv = "0.15"
env_logger = "0.7"
futures = "0.3"
hmac = "0.8"
include_dir = "0.6"
indoc = "1.0"
json = "0.12"
jwt = "0.10"
listenfd = "0.3"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_repr = "0.1"
sha2 = "0.9"
sqlx = {version = "0.3.5", features = ["postgres", "uuid", "chrono"]}
sqlx-core = "0.3.5"
sqlx-pg-migrate = "1.0"
thiserror = "1.0"
uuid = {version = "0.8", features = ["serde", "v4"]}
async-trait = "0.1"
redis = "0.17"
deadpool = "0.5"
deadpool-redis = "0.6"